# dot-grid-generator

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml
dot_paper_generator/: __init__.py  __main__.py  _dot_positions.py  _rendering.py  generator.py  pdf_generator.py  png_generator.py  presets.py
dot_paper_generator/presets/: ipad_goodnotes.yaml  supernote_nomad.yaml
tests/: test_dot_positions.py  test_generator.py  test_pdf_generator.py  test_png_generator.py  test_presets.py
