[project]
name = "dot-paper-generator"
version = "0.1.0"
description = "A generator for dot paper notes (vibe-coded)"
authors = [{ name = "Daniël Kok", email = "github@danieljkok.nl" }]
requires-python = ">=3.13,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pyyaml>=6.0",
    "reportlab[rlpycairo]>=4.0",
    "rlpycairo>=0.4.0",
]

[dependency-groups]
dev = ["pytest>=8", "types-reportlab>=4.5.1.20260521,<5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["dot_paper_generator"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
